Processed log lines works!  Color codes, takes driver profiles to map project relevent data.

--- a/SHPDiagnosticsViewer/SHPDiagnosticsViewer.csproj
+++ b/SHPDiagnosticsViewer/SHPDiagnosticsViewer.csproj
@@ -12,4 +12,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.5" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="..\UserInterface\feeny-logo-100-circle-black-back.png">
+      <Link>feeny-logo-100-circle-black-back.png</Link>
+    </Resource>
+  </ItemGroup>
 </Project>
